@@ -356,70 +356,3 @@ class RetweetDialog(UpdateWidgetBase):
     def _on_retweet_status(self, *args):
         #print args
         pass
-
-class UpdateWindowOLD(UpdateWindow):
-
-    def __init__(self, mainwindow, entry=None, account=None):
-        self.entry = entry
-        self.child = None # for GtkGrid.get_child_at no available
-
-        gui = Gtk.Builder()
-        gui.add_from_file(SHARED_DATA_FILE('update.glade'))
-        self.media = MediaFile(gui)
-        self.account_combobox = AccountCombobox(
-            gui, mainwindow.liststore, account)
-
-        is_above = SETTINGS.get_boolean('update-window-keep-above')
-        self.update_window = gui.get_object('window1')
-        self.update_window.set_keep_above(is_above)
-
-        self.button_image = gui.get_object('button_image')
-        self.label_num = gui.get_object('label_num')
-        self.comboboxtext_privacy = FacebookPrivacyCombobox(gui)
-        self.grid_button = gui.get_object('grid_button')
-        self.on_combobox_account_changed()
-
-        self.button_tweet = gui.get_object('button_tweet')
-        self.text_buffer = gui.get_object('textbuffer')
-        self.on_textbuffer_changed(self.text_buffer)
-
-        gui.connect_signals(self)
-
-# from: for ubuntu oneiric
-        gui.get_object('grid_entry').destroy()
-
-        if entry:
-            user = entry['user_name']
-            self.update_window.set_title(_('Reply to %s') % user)
-            self.text_buffer.set_text('@%s '% user)
-
-        self.update_window.present()
-# end
-
-class RetweetDialogOLD(RetweetDialog):
-
-    def run(self, entry, parent):
-        self.parent = parent.window
-        self.has_multi_account = len(parent.liststore.account_liststore) > 1
-
-        gui = Gtk.Builder()
-        gui.add_from_file(SHARED_DATA_FILE('retweet.glade'))
-
-        gui.get_object('grid1').destroy()
-        self._run("dummy",gui, entry)
-
-    def _run(self, unknown, gui, entry, *args):
-        dialog = gui.get_object('messagedialog')
-        dialog.set_transient_for(self.parent)
-
-        screen_name = self.twitter_account.user_name
-        text = _("Retweet this to your (%s's) followers?") % screen_name \
-            if self.has_multi_account else _("Retweet this to your followers?") 
-        dialog.format_secondary_text(text)
-
-        response_id = dialog.run()
-
-        if response_id == Gtk.ResponseType.YES:
-            self.twitter_account.api.retweet(entry['id'], self._on_retweet_status)
-
-        dialog.destroy()
